# chatBotFYP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  ingestion.py  main.py  schemas.py
app/services/: __init__.py  embeddings.py  llm.py  rag.py  vector_store.py
data/kb/: .gitkeep
docs/: API_REFERENCE.md
templates/: admin.html  base.html  chat.html
