[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vercel-fastapi-starter"
version = "0.1.0"
description = "University RAG chatbot: FastAPI + FAISS + Jinja2"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.0.0",
  "httpx>=0.28.0",
  "numpy>=1.24.0",
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=3.0.0",
  "pypdf>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]
